--- a/FullStackApi/wwwroot/index.html
+++ b/FullStackApi/wwwroot/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>FullStack API-et</title>
 </head>
 <body>
-    <h1>FullStack</h1>
-</body>
+    <h1 class="text-center mt-5">FullStack API</h1>
+    <h6 class="text-center mt-4 text-muted">FullStack API-et er bygget av Saad Janjua. 2022 ©</h6>
 </html>
