--- a/FullStackApi/wwwroot/index.html
+++ b/FullStackApi/wwwroot/index.html
@@ -12,5 +12,5 @@
 </head>
 <body>
     <h1 class="text-center mt-5">FullStack API</h1>
-    <h6 class="text-center mt-4 text-muted">FullStack API-et er bygget av Saad Janjua. 2022 ©</h6>
+    <h2 class="text-center mt-4 text-muted h6">FullStack API-et er bygget av Saad Janjua. 2022 ©</h2>
 </html>
